# pv-finder

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  environment-gpu.yml  environment.yml  pv-finder_manual.md  read_me.md
ana/: CMakeLists.txt  README.md  combinetruthvertices.C  compute_over.h  data.h  ellipsoid.h  fcn.h  hit.h  hits.h  lhcbStyle.h  main.C  makehist.C  makehistfromtracks.C  maketracks.C  mds_ana.C  mds_ana.h  plot.C  point.h  property.h  runall.sh  testA.py  testAna.py  tracks.h  trajectory.h  triplet.h  triplet_utils.h  utils.h
ana/apps/: combine_truth_vertices_main.C  make_hist_from_tracks_main.C  make_hist_main.C  make_tracks_main.C
ana/data/: corehits.h  corenhits.h  corepvs.h  corerecontracks.h  coretruthtracks.h  datakernel.h  datapvs.h  ioclass.h  raw_hits.h  raw_kernel.h  raw_tracks.h
ana/mds_ana/: mds_ana.C
baileyds_stuff/: AllCNN_example.ipynb  AllCNN_withEVE_example.ipynb  DDplus_example.ipynb  Talk.pptx  baileyds  directory.md  directory.txt
binned_tracking/: Makefile  data.h  hits.h  test_tracking.cc  tracklets.h  trajectory.h
dat/: compare_plot.py  kern.root  kernel_10pvs.root  result_10pvs.root  test_100pvs.root  test_10pvs.root
mds_notebooks/: Efficiency.ipynb  Efficiency_Full_LHCb_MC.ipynb  Efficiency_Full_LHCb_MC_FP_studies.ipynb  Efficiency_Full_LHCb_MC_FP_studies_test.ipynb  ExportModel.ipynb  GNN_test.ipynb  ML  PlotAnEvent.ipynb  PlotEachPV.ipynb  RunModel.ipynb  RunModel_05Feb2021_AllCNN6Layer_Ca_KDE_A_iter0.ipynb  RunModel_05Feb2021_AllCNN6Layer_Ca_KDE_A_iter1.ipynb  RunModel_18December2020-AllCNN8Layer_Two_KDE_withPcnn_more_data_MinBiasValidation_lr_1em6-0p0.ipynb  RunModel_18December2020-AllCNN8Layer_Two_KDE_withPcnn_more_data_MinBiasValidation_lr_1em6-2p5.ipynb  RunModel_18December2020-AllCNN8Layer_Two_KDE_withPcnn_more_data_MinBiasValidation_lr_5em7-10p0.ipynb  RunModel_18December2020-AllCNN8Layer_Two_KDE_withPcnn_more_data_MinBiasValidation_lr_5em7-15p0.ipynb  RunModel_Demo_01June2020-SimpleCNNLayer_Ca.ipynb  RunModel_Demo_02June2020-SimpleCNNLayer_Ca_04Feb2021.ipynb  RunModel_Demo_New_KDE_test-11October2020.ipynb  RunModel_FourFeature_CNN6Layer_TargetsAA-Alt_Loss_A_4p5_190814_400Epochs.ipynb  RunModel_TracksToHists_B_210110_Iter3_float_KDE_to_Hists.ipynb  RunModel_TracksToHists_B_210110_Iter4B_float_KDE_to_Hists.ipynb  RunModel_TracksToHists_B_210110_Iter4_float_KDE_to_Hists.ipynb  RunModel_TracksToHists_B_210110_Iter6C_float_KDE_to_Hists.ipynb  RunModel_TracksToHists_B_210110_Iter7B_float_KDE_to_Hists.ipynb  RunModel_TracksToHists_B_210112_Iter10B_float_KDE_to_Hists.ipynb  RunModel_TracksToHists_C_210206_Iter0A_float_kde_to_hists.ipynb  RunModel_TracksToHists_C_210206_Iter0_freeze_kde_to_hists.ipynb  RunModel_TracksToHists_C_210206_Iter0_tryAgain.ipynb  RunModel_TracksToHists_C_210206_Iter1A_float_kde_to_hists.ipynb  RunModel_TracksToHists_C_210206_Iter1C_float_tracks_to_hists.ipynb  RunModel_Tracks_to_Hists_DDplus_SimpleCNN5Layer_Ca_210109_Iteration_5B_moreTrainingData.ipynb  RunModel_Tracks_to_Hists_DDplus_SimpleCNN5Layer_Ca_Dec28_FirstLook.ipynb  RunModel_Tracks_to_Hists_DDplus_SimpleCNN5Layer_Ca_Dec29_First_Iteration.ipynb  RunModel_Tracks_to_Hists_DDplus_SimpleCNN5Layer_Ca_Dec29_Iteration_2B.ipynb  RunModel_Tracks_to_Hists_DDplus_SimpleCNN5Layer_Ca_Dec29_Iteration_3B.ipynb  RunModel_Tracks_to_Hists_DDplus_SimpleCNN5Layer_Ca_Dec29_Iteration_4B.ipynb  RunModel_Tracks_to_KDE_B_Iter1A_DDplus_22Jan2021_loss_Ba_4xWill.ipynb  RunModel_Tracks_to_KDE_B_Iter2B_DDplus_23Jan2021_loss_Ba_4xWill.ipynb  RunModel_Tracks_to_KDE_B_Iter3B_DDplus_23Jan2021_loss_Ba_4xWill.ipynb  (+36 more)
model/: ProcessFiles.py  README.md  RunEfficiency.py  RunModel.py  RunModel_mds.py  RunModel_mdsA.py  RunModel_mdsB.py  (+83 more)
tests/binned_tracking/: .gitignore  CMakeLists.txt  data.h  tracklets.h  trajectory.h
(+298 files in other folders)
